# financial-overview

./: .gitignore  README.md  config.py  pyproject.toml
conf/: README.md  logging.yml
config/: README.md  settings.toml  validators.toml
docs/source/: conf.py  index.rst
kafka/: data_extraction.py
src/finance_overlook/: __init__.py  __main__.py
tests/: test_run.py
