[tool.poetry]
name = "financial-overlook"
version = "0.1.0"
description = "An application to get data from brazilian stock market and deploy it into a dashboard for overlook"
authors = ["Lucas Garcia <garcia.ln@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
ipython = ">=8.10"
kedro = "~=0.19.3"
kedro-telemetry = ">=0.3.1"
kedro-viz = ">=6.7.0"
pytest = "~=7.2"
pytest-cov = "~=3.0"
pytest-mock = ">=1.7.1, <2.0"
ruff = "~=0.1.8"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
finance-overlook = "finance_overlook.__main__:main"

[tool.poetry.plugins."kedro.hooks"]

[tool.kedro]
package_name = "financial_overlook"
project_name = "financial-overlook"
kedro_init_version = "0.19.3"
tools = ['Linting', 'Testing', 'Custom Logging', 'Documentation', 'Data Structure', 'Kedro Viz']
example_pipeline = "False"
source_dir = "src"

[tool.pytest.ini_options]
addopts = """
--cov-report term-missing \
--cov src/finance_overlook -ra"""

[tool.coverage.report]
fail_under = 0
show_missing = true
exclude_lines = ["pragma: no cover", "raise NotImplementedError"]

[tool.ruff.format]
docstring-code-format = true

[tool.ruff]
line-length = 88
show-fixes = true
select = [
    "F",   # Pyflakes
    "W",   # pycodestyle
    "E",   # pycodestyle
    "I",   # isort
    "UP",  # pyupgrade
    "PL",  # Pylint
    "T201", # Print Statement
]
ignore = ["E501"]  # Ruff format takes care of line-too-long
